@@ -1,5 +1,6 @@
 /Clustericious-Config-*
 /Build
+/Build.bat
 /MYMETA.json
 /MYMETA.yml
 /_build
