@@ -1,5 +1,9 @@
 Revision history for Clustericious-Config
 
+        - substitute - for :: in config filenames
+          for example ~/etc/Clustericious::HelloWorld.conf should now be
+          ~/etc/Clustericious-HelloWorld.conf
+
 0.22    Wed Jul  3 15:00:09 EDT 2013
         - added create_config_helper_ok to Test::Clustericious::Config
         - don't re-use File::HomeDir::Test if it has already been loaded
